Fixed the spacing in the footer.

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -41,9 +41,20 @@ main {
 
 .footer-li {
     display: inline;
-    padding: 5px 5px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    padding-left: 15px;
+    padding-right: 15px;
     margin-top: 5px;
     font-size: 14px;
+}
+
+#advertising {
+    padding-left: 30px;
+}
+
+#settings {
+    padding-right: 30px;
 }
 
 .li-left{
